# python-blogger

auth-service/: .dockerignore  Dockerfile  pyproject.toml  run_app.sh
auth-service/src/: main.py
auth-service/src/api/: auth.py
auth-service/src/config/: __init__.py
auth-service/src/types/: auth.py
auth-service/src/utils/: token.py
blog-service/: .env  pyproject.toml  run_app.sh
blog-service/src/: auth.py  db.py  main.py
blog-service/src/api/: blog.py  blog_category.py
blog-service/src/api/types/: __init__.py  blog.py  blog_category.py  response.py  token.py
blog-service/src/config/: __init__.py  table_name.py
blog-service/src/models/: __init__.py  blog.py  blog_category.py
blog-service/src/utils/: token.py
kubernetes/deployments/: auth-service.yaml  postgres.yaml  user-service.yaml
kubernetes/ingress/: ingress.yaml
kubernetes/namespaces/: blogger.yaml
kubernetes/services/: auth-service.yaml  postgres.yaml  user-service.yaml
user-service/: .dockerignore  .env  Dockerfile  build_docker_image.sh  pyproject.toml  readme.md  run_app.sh
user-service/src/: db.py  main.py
user-service/src/api/: ping.py  user.py
user-service/src/config/: __init__.py
user-service/src/dependency/: authentication.py
user-service/src/models/: user.py
user-service/src/types/: user.py
user-service/src/utils/: id.py  password.py  token.py
